fix style: z-index for avatar

--- a/src/Intro/Intro.module.scss
+++ b/src/Intro/Intro.module.scss
@@ -103,6 +103,7 @@
 
 
   &__block {
+    z-index: 1;
     max-width: 490px;
     width: 100%;
     max-height: 560px;
@@ -118,7 +119,6 @@
       width: 100%;
       max-height: 560px;
       height: 100%;
-      object-fit: cover;
     }
   }
 
